# frame-extractor

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  urls.txt
src/: __init__.py  __main__.py  constants.py
src/core/: downloader.py  extractor.py  pipeline.py
src/utils/: config.py  logger.py
