[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-extractor"
version = "1.0.0"
description = "Automatic frame extraction tool for building Computer Vision datasets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "João Victor Nascimento Lima", email = "joaovictorlima20015@gmail.com" }
]

keywords = [
    "computer-vision",
    "dataset",
    "opencv",
    "artificial-intelligence",
    "video",
    "frame-extraction",
    "machine-learning"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video"
]

dependencies = [
    "opencv-python>=4.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "PyYAML>=6.0",
    "tqdm>=4.67.0"
]

[project.urls]
Homepage = "https://github.com/jambis-prg/frame-extractor"
Repository = "https://github.com/jambis-prg/frame-extractor"
Issues = "https://github.com/jambis-prg/frame-extractor/issues"

[project.scripts]
frame-extractor = "src.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]